# SemesterProject

./: .gitignore  .gitmodules  CMakeLists.txt
include/: account.hpp  account_manager.hpp  command_id.hpp  commands.hpp  course.hpp  filesystem.hpp  io.hpp
src/: account.cpp  account_manager.cpp  command_id.cpp  commands.cpp  course.cpp  filesystem.cpp  main.cpp
src/account/: account.cpp  account_manager.cpp
src/commands/: account_set_first_name.cpp  account_set_last_name.cpp  account_set_password.cpp  account_set_personal_email.cpp  account_set_phone.cpp  account_set_school_email.cpp  account_set_type.cpp  account_set_username.cpp  login.cpp  logout.cpp
src/commands/account/: create.cpp  delete.cpp  setters.cpp  summary.cpp
src/commands/course/: account_get.cpp  setters.cpp  summary.cpp
src/io/: print_table.cpp
